src/test/ui/borrowck/issue-7573.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-7573.rs:27:31
   |
LL |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |                               ^

error: borrowed data escapes outside of closure
  --> $DIR/issue-7573.rs:32:9
   |
LL |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |         ---------------- `lines_to_use` is declared here, outside of the closure body
LL |         //~^ NOTE cannot infer an appropriate lifetime
LL |     let push_id = |installed_id: &CrateId| {
   |                    ------------ `installed_id` is a reference that is only valid in the closure body
...
LL |         lines_to_use.push(installed_id);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `installed_id` escapes the closure body here

error: aborting due to previous error

